@startuml

package "FizzBuzz" #DDDDDD {
class Game {
  -PlayerInterface player
  +play()
}

interface PlayerInterface {
  +String say()
}
interface RulesInterface {
  +String convert()
}

class Rules {
  +String convert()
  -Bool isFizz()
  -Bool isBuzz()
  -Bool isFizzBuzz()
}
class Player {
  -RulesInterface rules
  +String say()
}

Game -> PlayerInterface
PlayerInterface <|- Player
RulesInterface <|-- Rules
Player <.. RulesInterface
}

@enduml